Refactoring some acceptance tests to use client library
